tests/neg/mutable.stk
val a: Int = 10
var b: Int = 20

fun foo(): Int =
  val x: Int = 5
  var y: Int = 3
  x = y 1 <<          // error
  y = y 2 *
  y

a = b 2 *             // error
b = a 3 +
